moved mirroring code to a node visitor. This fixes mirroring of group layers and local selections. Also removes duplicated code from layer and mask manager and puts it into the node manager.

Using selections is disabled for now as that produces some problems. Mirroring shape selections still not working.

BUG:298719
CCBUG:303379